Fri Oct 23 12:51:01 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test_results.c (gsl_test_rel): print a shorter "observed vs
 	expected" message if the description is 45 characters or longer

Mon Jun  1 11:02:04 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_errno.h: added GSL_EUNSUP for errors caused by a hardware
	feature which is not supported on a particular platform

	* renamed test.c to test_results.c to avoid confusion when debugging
	other test programs called test.c

Sat May 30 16:11:34 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_errno.h: add GSL_ESING for errors caused by singularities
	or other bad function behavior

Fri May 29 14:41:19 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_errno.h: added GSL_EBADLEN to signify bad lengths of
 	matrices or vectors (e.g. non-conformant sizes in a matrix or
 	vector multiplication)

Wed May 27 18:15:34 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test.c (gsl_test_str): changed things so that the strings aren't
 	printed unless the string equality test fails (usually they were
 	too long)

Mon May 18 17:58:20 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test.c (gsl_test_rel): added a test for numerical quantities,
 	given a result, an expected result and an allowable relative
 	error.
	(gsl_test_int): added a test for comparing integers

Sun May 10 16:03:12 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_errno.h: added GSL_EROUND for roundoff errors

Fri May  8 18:50:13 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_errno.h: changed GSL_ETIMEOUT to GSL_EMAXITER to describe
 	the error that occurs when a specified number of iterations is
 	exceeded.

Sun Apr 19 19:14:05 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* strerror.c (gsl_strerror): added an strerror function for making
 	readable descriptions of the error number

Wed Apr 15 21:59:57 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added a stream handler, for the error stream

	* completely reorganized the files, but the functions are
 	relatively unchanged
