@@ -11,6 +11,10 @@ gsl_test_rel (double result, double expected, double relative_error,
 	      const char *test_description, ...) ;
 
 void
+gsl_test_abs (double result, double expected, double relative_error,
+	      const char *test_description, ...) ;
+
+void
 gsl_test_int (int result, int expected, const char *test_description, ...) ;
 
 void
